upd localization prop files

--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -121,3 +121,26 @@ profile.user.table.cargo.thead.th.2=Width, cm
 profile.user.table.cargo.thead.th.3=Height, cm
 profile.user.table.cargo.thead.th.4=Weight, kg
 profile.user.table.cargo.thead.th.5=Order State
+# ADMIN PROFILE PAGE
+profile.admin.navbar.profile=Profile
+profile.admin.navbar.users=Load Users
+profile.admin.navbar.orders=Load Orders
+profile.admin.table.header.1=Admin com
+profile.admin.table.header.2=mand result
+profile.admin.table.thead.th.input.1=Order ID
+profile.admin.table.thead.th.input.2=User ID
+profile.admin.table.thead.th.input.3=Route
+profile.admin.table.thead.th.input.4=Registration date
+profile.admin.table.thead.th.input.5=Delivery date
+profile.admin.table.thead.th.input.6=Price, ₴
+profile.admin.table.thead.th.input.7=State
+profile.admin.table.thead.th.input.8=Actions
+profile.admin.table.tbody.action.approve=Approve
+profile.admin.table.tbody.action.block=Block
+profile.admin.table.users.thead.th.input.1=User
+profile.admin.table.users.thead.th.input.2=Name
+profile.admin.table.users.thead.th.input.3=Surname
+profile.admin.table.users.thead.th.input.4=Email
+profile.admin.table.users.thead.th.input.5=Registration date
+profile.admin.table.users.thead.th.input.6=Role
+profile.admin.table.empty=No command was used!
